--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 =Redmine Collapse plugin
 
-A plugin to transform the default Redmine sidebar into a collapsible sidebar on the left side also providing some additional tabs containing project- and menu-links.
+A plugin to transform the default, static Redmine sidebar into a collapsible sidebar on the left side also providing some additional tabs containing project- and menu-links.
 
 ==Features
 
@@ -25,13 +25,13 @@ This plugin is compatible with the Redmine 0.8-stable branch (thus including rel
 
 ===Browser compatibility
 
-* This plugin is fully compatible on the current, big-four of browser(-engines):
+* This plugin is fully compatible on the current, big-four of browser-engines:
   * Gecko (Mozilla)
   * Trident (Internet Explorer 8)
   * Presto (Opera)
   * WebKit (Safari/Chrome)
 
-* This plugin is for about 99% compatible after applying a manual CSS-change for certain themes) on the following browser(-engine):
+* This plugin is for about 99% compatible after applying a manual CSS-change for certain themes) on the following browser-engine:
   * Trident (Internet Explorer 7)
 
 ==Obtaining the plugin
@@ -97,7 +97,7 @@ Make sure that no plugin-assets remain available in _../public/plugin_assets/red
 
 This is a limited selection of the changes made to the plugin. For the complete changelog see the _../CHANGELOG_-file in the plugin directory.
 
-===. 0.2.0 (03-05-2009)
+===0.2.0 (03-05-2009)
 
 Second release providing some major new features, fixes for reported bugs plus providing compatibility with current Redmine versions and Redmine themes:
 
@@ -119,7 +119,7 @@ Second release providing some major new features, fixes for reported bugs plus p
 * Task-HITDM:  Sync the base-layout with the vendor's bleeding-edge source (trunk)
 * Task-HITDM:  Enhance the projects tab styling to match the styling of the menus tab
 
-===. 0.1.0 (07-01-2009)
+===0.1.0 (07-01-2009)
 
 Initial version developed as a single Redmine plugin. Some major-issues were closed with this release:
 
@@ -130,7 +130,7 @@ Initial version developed as a single Redmine plugin. Some major-issues were clo
 * Enhancement:  Obviation of change in flash-message rendering in base-layout in Redmine 0.8.1
 * Enhancement:  Move logics for selected-tab from base-view to helper-method
 
-===. 0.0.0 (as of 01-11-2008)
+===0.0.0 (as of 01-11-2008)
 
 * Initial sources by Sebastian Kurfürst as core-hack patches for the Typo3 Redmine instance.
 
