--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,10 @@
 
 A plugin to transform the default, static Redmine sidebar into a collapsible sidebar on the left side also providing some additional tabs containing project- and menu-links.
 
+== Packager and maintainer
+
+* Mischa The Evil
+
 ==Features
 
 Besides that the plugin overrides Redmine Core's base-layout, it also provides the following features:
@@ -82,20 +86,21 @@ to:
 
 ==Upgrade
 
-1. Download the plugin's latest archive file either using one of the described ways from "Obtaining the plugin"
-2. Unzip the file to your Redmine into the _../vendor/plugins_ directory
-3. Restart your Redmine
+1. Download the latest archive file from the available sources (see "Obtaining the plugin")
+2. Backup the currently deployed collapse plugin (in _"../vendor/plugins"_: mv redmine_collapse redmine_collapse-backup)
+3. Unzip the downloaded file to your Redmine into the plugin-directory _"../vendor/plugins"_
+4. Restart your Redmine
 
 ==Uninstall
 
-1. Remove the directory +redmine_collapse+ from the plugin-directory _../vendor/plugins_
+1. Remove the directory +redmine_collapse+ from the plugin-directory _"../vendor/plugins"_
 2. Restart Redmine.
 
-Make sure that no plugin-assets remain available in _../public/plugin_assets/redmine_collapse_.
+Make sure that no plugin-assets remain available in _"../public/plugin_assets/redmine_collapse"_.
 
 ==Changelog
 
-This is a limited selection of the changes made to the plugin. For the complete changelog see the _../CHANGELOG_-file in the plugin directory.
+This is a limited selection of the changes made to the plugin. For the complete changelog see the _"../CHANGELOG_"-file in the plugin directory.
 
 ===0.2.0 (03-05-2009)
 
@@ -141,7 +146,7 @@ Thanks goes out to the following people:
 ===Code-credits
 
 * Eric Davis, Little Stream Software (http://www.littlestreamsoftware.com)
-  * Provided skeleton for Redmine core patches (see _../lib/collapse_application_helper_patch.rb_)
+  * Provided skeleton for Redmine core patches (see _"../lib/collapse_application_helper_patch.rb"_)
   * Helped a lot making the overall plugin-source more Ruby-ish
 * Sebastian Kurfürst, Typo3 Development Team (http://www.typo3.org)
   * Author of the Redmine core hacks, to implement this feature for Typo3-Forge, used as a base for this plugin
@@ -154,7 +159,7 @@ Thanks goes out to the following people:
 
 ==Licensing
 
-This plugin is licensed under the GNU GPL v2. See LICENSE.txt and GPL.txt for details.
+This plugin is open-source and licensed under the "GNU General Public License v2":http://www.gnu.org/licenses/old-licenses/gpl-2.0.html (GPL). See COPYRIGHT.txt and GPL.txt for details.
 
 ==Support
 
