--- a/lang/cs.yml
+++ b/lang/cs.yml
@@ -1,14 +1,14 @@
-label_actions_tab: Actions
-label_menus_tab: Menus
-label_projects_tab: Projects
-label_global_menu: Global menu
-label_project_menu: Project menu
-setting_collapse_position: Sidebar position
-setting_collapse_showprojectstab: Show the projects tab
-setting_collapse_showmenustab: Show the menus tab
-setting_collapse_showprojectmenuinmenustab: Show the project-menu in the menus tab
-setting_collapse_hideprojectselector: Hide the core project selector
-label_collapse_left: Left
-label_collapse_right: Right
-label_spenttime_details: Spent time details
-label_spenttime_report: Spent time report
+label_actions_tab: Akce
+label_menus_tab: Menu
+label_projects_tab: Projekty
+label_global_menu: Hlavní menu
+label_project_menu: Projektové menu
+setting_collapse_position: Pozice bočního panelu
+setting_collapse_showprojectstab: Zobrazení záložky s projekty
+setting_collapse_showmenustab: Zobrazení záložky s menu
+setting_collapse_showprojectmenuinmenustab: Zobrazení projektového menu v záložce Menu
+setting_collapse_hideprojectselector: Skrytí okna s výběrem projektů
+label_collapse_left: Vlevo
+label_collapse_right: Vpravo
+label_spenttime_details: Strávený čas - detaily
+label_spenttime_report: Strávený čas - report
