--- a/lang/sk.yml
+++ b/lang/sk.yml
@@ -1,14 +1,14 @@
-label_actions_tab: Actions
-label_menus_tab: Menus
-label_projects_tab: Projects
-label_global_menu: Global menu
-label_project_menu: Project menu
-setting_collapse_position: Sidebar position
-setting_collapse_showprojectstab: Show the projects tab
-setting_collapse_showmenustab: Show the menus tab
-setting_collapse_showprojectmenuinmenustab: Show the project-menu in the menus tab
-setting_collapse_hideprojectselector: Hide the core project selector
-label_collapse_left: Left
-label_collapse_right: Right
-label_spenttime_details: Spent time details
-label_spenttime_report: Spent time report
+label_actions_tab: Akcie
+label_menus_tab: Menu
+label_projects_tab: Projekty
+label_global_menu: Hlavné menu
+label_project_menu: Projektové menu
+setting_collapse_position: Pozícia bočného panelu
+setting_collapse_showprojectstab: Zobrazenie záložky s projektami
+setting_collapse_showmenustab: Zobrazenie záložky s menu
+setting_collapse_showprojectmenuinmenustab: Zobrazenie projektového menu v záložke Menu
+setting_collapse_hideprojectselector: Skrytie okna s výberom projektov
+label_collapse_left: Vľavo
+label_collapse_right: Vpravo
+label_spenttime_details: Strávený čas - detaily
+label_spenttime_report: Strávený čas - report
